[package]
name = "diesel_compile_tests"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]

[workspace]

[dependencies]
diesel = { path = "../diesel", features = ["extras", "sqlite", "postgres", "mysql"] }
diesel_codegen = { path = "../diesel_codegen" }
compiletest_rs = "=0.2.7"

[replace]
"diesel:0.15.1" = { path = "../diesel" }
"diesel_codegen:0.15.0" = { path = "../diesel_codegen" }
"diesel_infer_schema:0.15.0" = { path = "../diesel_infer_schema" }
